<?xml version='1.0' encoding='utf-8' ?>
<PreferenceScreen android:key="root" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:explorer="http://schemas.android.com/apk/res-auto">
  <PreferenceCategory android:title="@string/title_premium"
                      android:key="settings_payment"
                      explorer:iconSpaceReserved="false">
    <PreferenceScreen android:title="@string/upgrade_to_premium"
                      android:key="payment_screen"
                      explorer:iconSpaceReserved="false" />
    <ListPreference android:entries="@array/night_mode_entries"
                    android:title="@string/title_theme"
                    android:key="night_mode"
                    android:defaultValue="1"
                    android:entryValues="@array/night_mode_values"
                    explorer:iconSpaceReserved="false" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/general_settings"
                      explorer:iconSpaceReserved="false">
    <PreferenceScreen android:title="@string/settings_default_apps"
                      android:key="defaults_screen"
                      explorer:iconSpaceReserved="false" />
    <PreferenceScreen android:title="@string/builtin_apps_settings"
                      android:key="built_in_apps_screen"
                      explorer:iconSpaceReserved="false">
      <PreferenceCategory android:title="@string/builtin_apps_settings"
                          android:key="settings_built_in_apps"
                          explorer:iconSpaceReserved="false">
        <CheckBoxPreference android:title="@string/image_viewer"
                            android:key="use_internal_image_viewer"
                            android:defaultValue="true"
                            explorer:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/video_player"
                            android:key="use_internal_video_player"
                            android:defaultValue="true"
                            explorer:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/music_player"
                            android:key="use_internal_music_player"
                            android:defaultValue="true"
                            explorer:iconSpaceReserved="false" />
        <CheckBoxPreference android:title="@string/text_editor"
                            android:key="use_internal_text_editor"
                            android:defaultValue="true"
                            explorer:iconSpaceReserved="false" />
      </PreferenceCategory>
    </PreferenceScreen>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/temporary_files"
                      android:key="settings_temporary_files_level1"
                      explorer:iconSpaceReserved="false">
    <PreferenceScreen android:title="@string/temporary_files"
                      android:key="temporary_files_screen"
                      explorer:iconSpaceReserved="false">
      <PreferenceCategory android:title="@string/temporary_files"
                          android:key="settings_temporary_files_level2"
                          explorer:iconSpaceReserved="false">
        <PreferenceScreen android:title="@string/files_thumbnails"
                          android:key="clear_thumbnails"
                          android:summary="-"
                          explorer:iconSpaceReserved="false" />
        <PreferenceScreen android:title="@string/files_network_storage_cache"
                          android:key="clear_network_storage_cache"
                          android:summary="-"
                          explorer:iconSpaceReserved="false" />
        <PreferenceScreen android:title="@string/files_other_temporary"
                          android:key="clear_other_temporary_files"
                          android:summary="-"
                          explorer:iconSpaceReserved="false" />
      </PreferenceCategory>
    </PreferenceScreen>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/recycle_bin_settings"
                      android:key="settings_recycle_bin"
                      explorer:iconSpaceReserved="false">
    <CheckBoxPreference android:title="@string/use_recycle_bin"
                        android:key="use_recycle_bin"
                        android:defaultValue="true"
                        explorer:iconSpaceReserved="false" />
    <CheckBoxPreference android:title="@string/recycle_bin_confirmation"
                        android:key="recycle_bin_confirmation_2"
                        android:dependency="use_recycle_bin"
                        android:defaultValue="true"
                        explorer:iconSpaceReserved="false" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/notifications_settings"
                      android:key="settings_notification"
                      explorer:iconSpaceReserved="false">
    <ListPreference android:entries="@array/storage_full_thredhold_entries"
                    android:title="@string/noti_storage_full"
                    android:key="storage_full_threshold"
                    android:defaultValue="97"
                    android:entryValues="@array/storage_full_threshold_values"
                    explorer:iconSpaceReserved="false" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/advanced_settings"
                      android:key="settings_advanced"
                      explorer:iconSpaceReserved="false">
    <CheckBoxPreference android:title="@string/setting_always_show_nav_icon"
                        android:key="show_drawer_always"
                        android:defaultValue="false"
                        explorer:iconSpaceReserved="false" />
    <CheckBoxPreference android:title="@string/setting_detect_usb_connection"
                        android:key="detect_usb_attached"
                        android:defaultValue="true"
                        explorer:iconSpaceReserved="false" />
    <CheckBoxPreference android:title="@string/setting_show_system"
                        android:key="show_system"
                        android:defaultValue="false"
                        explorer:iconSpaceReserved="false" />
    <CheckBoxPreference android:visibility="gone"
                        android:title="@string/setting_root_access_mode"
                        android:key="root_access_mode"
                        android:dependency="show_system"
                        android:defaultValue="false"
                        explorer:iconSpaceReserved="false" />
    <CheckBoxPreference android:title="@string/setting_show_dual_apps"
                        android:key="show_dual_apps"
                        android:defaultValue="false"
                        explorer:iconSpaceReserved="false" />
    <ListPreference android:entries="@array/file_size_unit_entries"
                    android:title="@string/setting_file_size_unit"
                    android:key="file_size_unit"
                    android:defaultValue="0"
                    android:entryValues="@array/file_size_unit_values"
                    explorer:iconSpaceReserved="false" />
    <ListPreference android:entries="@array/music_player_engine_entries"
                    android:title="@string/setting_music_player_engine"
                    android:key="music_player_engine"
                    android:defaultValue="0"
                    android:entryValues="@array/music_player_engine_values"
                    explorer:iconSpaceReserved="false" />
    <ListPreference android:entries="@array/list_date_format_entries"
                    android:title="@string/setting_list_date_format"
                    android:key="list_date_format"
                    android:defaultValue="0"
                    android:entryValues="@array/list_date_format_values"
                    explorer:iconSpaceReserved="false" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/other_settings"
                      android:key="settings_other_level1"
                      explorer:iconSpaceReserved="false">
    <PreferenceScreen android:title="@string/other_settings"
                      android:key="other_settings_screen"
                      explorer:iconSpaceReserved="false">
      <PreferenceCategory android:title="@string/other_settings"
                          android:key="settings_other_level2"
                          explorer:iconSpaceReserved="false">
        <CheckBoxPreference android:title="@string/setting_show_history"
                            android:key="show_history"
                            android:defaultValue="true"
                            explorer:iconSpaceReserved="false" />
        <ListPreference android:entries="@array/app_backup_storage_entries"
                        android:title="@string/app_backup_storage"
                        android:key="app_backup_storage"
                        android:defaultValue="0"
                        android:entryValues="@array/app_backup_storage_values"
                        explorer:iconSpaceReserved="false" />
      </PreferenceCategory>
    </PreferenceScreen>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/show_advanced_menus"
                      android:key="show_advacned_menus"
                      explorer:iconSpaceReserved="false">
    <CheckBoxPreference android:title="@string/menu_add_bookmark"
                        android:key="show_add_to_favorite"
                        android:defaultValue="true"
                        explorer:iconSpaceReserved="false" />
    <CheckBoxPreference android:title="@string/menu_add_to_home_screen"
                        android:key="show_add_to_home_screen"
                        android:defaultValue="@bool/default_show_add_to_home_screen"
                        explorer:iconSpaceReserved="false" />
    <CheckBoxPreference android:title="@string/settings_hide_unhide"
                        android:key="show_hide_unhide"
                        android:defaultValue="false"
                        explorer:iconSpaceReserved="false" />
    <CheckBoxPreference android:title="@string/menu_open_as"
                        android:key="show_open_as"
                        android:defaultValue="false"
                        explorer:iconSpaceReserved="false" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/about_preference"
                      android:key="settings_about"
                      explorer:iconSpaceReserved="false">
    <Preference android:title="@string/about_preference"
                android:key="about_screen"
                explorer:iconSpaceReserved="false" />
  </PreferenceCategory>
</PreferenceScreen>