<?xml version='1.0' encoding='utf-8' ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:explorer="http://schemas.android.com/apk/res-auto">
  <group android:id="@id/group_non_search">
    <item android:icon="@drawable/ic_ab_create_new_folder"
          android:id="@id/menu_new_folder"
          android:orderInCategory="100"
          android:title="@string/menu_new"
          explorer:showAsAction="never" />
    <item android:icon="@drawable/ic_ab_view_settings"
          android:id="@id/menu_view_settings"
          android:orderInCategory="150"
          android:title="@string/menu_view_settings"
          explorer:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_ab_refresh"
          android:id="@id/menu_refresh"
          android:orderInCategory="200"
          android:title="@string/menu_refresh"
          explorer:showAsAction="never" />
  </group>
  <item android:icon="@drawable/ic_ab_search"
        android:id="@id/menu_search"
        android:orderInCategory="100"
        android:title="@string/menu_search"
        explorer:actionLayout="@layout/view_search"
        explorer:showAsAction="ifRoom|collapseActionView" />
  <group android:id="@id/group_search_option">
    <item android:icon="@drawable/ic_ab_include_subfolder"
          android:id="@id/menu_search_folder_option"
          android:visible="false"
          android:orderInCategory="101"
          android:title="@string/label_all_subfolders"
          explorer:showAsAction="ifRoom" />
  </group>
</menu>