<?xml version='1.0' encoding='utf-8' ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:explorer="http://schemas.android.com/apk/res-auto">
  <item android:icon="@drawable/ic_ab_equalizer"
        android:id="@id/menu_equalizer"
        android:orderInCategory="90"
        android:title="@string/menu_effectspanel"
        explorer:showAsAction="ifRoom" />
  <item android:icon="@drawable/ic_ab_share"
        android:id="@id/menu_share"
        android:orderInCategory="100"
        android:title="@string/menu_share"
        explorer:showAsAction="ifRoom" />
  <item android:icon="@drawable/ic_ab_save"
        android:id="@id/menu_save"
        android:orderInCategory="110"
        android:title="@string/menu_save"
        explorer:showAsAction="ifRoom" />
</menu>